--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "jaxtyping>=0.3.2",
     "numpy>=2.3.2",
-    "torch>=2.8.0",
+    "torch==2.6.0",
+    "triton==3.2.0",
     "triton-viz",
 ]
 
